# file-compare

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
file_compare/: __init__.py  module.py
file_compare/base/: compAlgos.py  compCsv.py  compFile.py  compFilePlugin.py  compIO.py  compKeep.py  compLog.py  compPlugin.py  compSanit.py  compScan.py  compUI.py  compUtils.py
file_compare/plugins/: av.py  image.py  imagePlugin.py  video.py  videoPlugin.py
file_compare/plugins/common/: avFile.py  ffstream.py  hasher.py
src/: compControl.py
src/base/: compAlgos.py  compCsv.py  compFile.py  compFilePlugin.py  compKeep.py  compLog.py  compPlugin.py  compScan.py  compUI.py  compUtils.py
src/plugins/: ffstream.py  hasher.py  imagePlugin.py  videoFile.py  videoPlugin.py
src/video/: ffmedia.py
tests/: test_plugins.py
